<resources>


    <string name="app_name">湛江市统一门户</string>

    <!--登录页面-->
    <string name="username">用户名</string>
    <string name="password1">密码\u3000</string>
    <string name="login_commint">登录</string>
    <string name="forget_password">忘记密码？</string>
    <!--主页-->
    <string name="message">消息</string>
    <string name="work">工作</string>
    <string name="contract">联系人</string>
    <string name="mine">我的</string>


</resources>
