<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cndatacom.zjproject.ui.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottomNavigation_size"
        android:background="@color/colorBackgroud">

    </FrameLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/bottomNavigation_size"
        android:background="@color/colorLine" />

    <RadioGroup
        android:id="@+id/rg_bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomNavigation_size"
        android:layout_gravity="bottom"
        android:background="@color/colorBottomNavigation"
        android:orientation="horizontal">

        <com.cndatacom.zjproject.widget.BadgeRadioButton
            android:drawableTop="@drawable/selector_msg"
            android:id="@+id/message"
            android:layout_width="0dp"
            android:paddingTop="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message"
            android:background="@null"
            android:textColor="@drawable/selector_color_navigation"
            android:textSize="@dimen/textSize12"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/work"
            android:layout_width="0dp"
            android:text="@string/work"
            android:drawableTop="@drawable/selector_work"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:background="@null"
            android:textColor="@drawable/selector_color_navigation"
            android:textSize="@dimen/textSize12"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:drawableTop="@drawable/selector_contract"
            android:id="@+id/contract"
            android:layout_width="0dp"
            android:textColor="@drawable/selector_color_navigation"
            android:textSize="@dimen/textSize12"
            android:text="@string/contract"
            android:paddingTop="5dp"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:drawableTop="@drawable/selector_mine"
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/selector_color_navigation"
            android:button="@null"
            android:paddingTop="5dp"
            android:background="@null"
            android:gravity="center"
            android:textSize="@dimen/textSize12"
            android:text="@string/mine" />

    </RadioGroup>


</FrameLayout>
