<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize22" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:background="@null" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize22" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_alignBaseline="@id/textView"
            android:layout_toLeftOf="@+id/linearLayout"
            android:layout_toRightOf="@+id/textView"
            android:background="@null" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:visibility="gone"
                android:src="@mipmap/icon_delete" />

            <ImageView
                android:id="@+id/iv_sight"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/icon_closeeye" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"

        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/btn_loginCommit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/red_rounded_shape"
        android:text="@string/login_commint"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize18" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize12" />

</LinearLayout>